feature: updated dao/controller generators
